src/objects/MYBZ_Usage_Metric_Report__c.object
<CustomObject>
    <fields>
        <fullName>DateTimeStamp__c</fullName>
        <label>DateTimeStamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Id__c</fullName>
        <label>Global Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>TEXT( CreatedBy.MYBZ_Role__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <label>Usage Metric Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Page__c</columns>
        <columns>Global_Id__c</columns>
        <columns>NAME</columns>
        <columns>DateTimeStamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Usage Metric Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Metric Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>